# Lima-camera-eiger

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
cmake/: FindLZ4.cmake
conda/camera/: build.sh  meta.yaml
conda/tango/: build.sh  meta.yaml
doc/: index.rst  tango.rst
include/: EigerCamera.h  EigerCompatibility.h  EigerDetInfoCtrlObj.h  EigerEventCtrlObj.h  EigerInterface.h  EigerRoiCtrlObj.h  EigerSavingCtrlObj.h  EigerStatistics.h  EigerStreamInfo.h  EigerSyncCtrlObj.h
python/: __init__.py
sdk/linux/EigerAPI/include/eigerapi/: CurlLoop.h  Requests.h
sdk/linux/EigerAPI/src/: AutoMutex.h  CurlLoop.cpp  Requests.cpp
sip/: EigerCamera.sip  EigerInterface.sip  EigerRoiCtrlObj.sip  EigerStatistics.sip  EigerStreamInfo.sip
src/: EigerCamera.cpp  EigerCameraRequests.h  EigerDecompress.cpp  EigerDecompress.h  EigerDetInfoCtrlObj.cpp  EigerEventCtrlObj.cpp  EigerInterface.cpp  EigerRoiCtrlObj.cpp  EigerSavingCtrlObj.cpp  EigerStream.cpp  EigerStream.h  EigerStreamInfo.cpp  EigerSyncCtrlObj.cpp
tango/: CMakeLists.txt  Eiger.py
test/: CMakeLists.txt  test_eiger.cpp  test_int_trig_mult.py
